# Arduvo

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/file/: dll_file.cpp  dll_file.hpp  file.cpp  file.hpp
src/log/: logger.cpp  logger.hpp
src/process/: process_finder.cpp  process_finder.hpp
test/: CMakeLists.txt
